--- a/views/404.html
+++ b/views/404.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Product</title>
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/product.css" />
   </head>
   <body>
     <header class="main-header">
@@ -13,20 +12,11 @@
         <ul class="main-header__item-list">
           <li class="main-header__item"><a href="/">Shop</a></li>
           <li class="main-header__item">
-            <a class="active" href="/admin/add-product">Add Product</a>
+            <a href="/admin/add-product">Add Product</a>
           </li>
         </ul>
       </nav>
     </header>
-
-    <main>
-      <form class="product-form" action="/admin/add-product" method="POST">
-        <div class="form-control">
-          <label for="title">Title</label>
-          <input type="text" name="title" id="title" />
-        </div>
-        <button type="submit">Add Product</button>
-      </form>
-    </main>
+    <h1>Requested URL Not Found!!</h1>
   </body>
 </html>
