--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,38 +1,25 @@
 .product-form {
-  width: 20rem;
-  max-width: 90%;
-  margin: auto;
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
 }
 
-.form-control {
-  margin: 1rem 0;
+.product-item {
+    width: 20rem;
+    max-width: 95%;
 }
 
-.form-control label,
-.form-control input {
-  display: block;
-  width: 100%;
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
 }
 
-.form-control input {
-  border: 1px solid #dbc441;
-  border-radius: 2px;
-  font: inherit;
-  padding: 0.5rem 1rem;
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
 }
 
-button {
-  padding: 0.5rem 1rem;
-  font: inherit;
-  border-radius: 4px;
-  border: 1px solid #3e00a1;
-  color: #3e00a1;
-  background-color: white;
-  cursor: pointer;
-}
-
-button:hover,
-button:active {
-  background-color: #3e00a1;
-  color: white;
+.product__description {
+    text-align: center;
 }
