--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,4 @@
 <form action="/cart" method="post">
-  <input type="hidden" value="<%= product.id %>" name="productId" />
+  <input type="hidden" value="<%= product._id %>" name="productId" />
   <button class="btn" type="submit">Add to Cart</button>
 </form>
