finish models and controllers using mongoDB

--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -22,14 +22,13 @@
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5" ><% if (editing) { %><%= product.description %><% } %></textarea>
+                <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
             </div>
-
             <% if (editing) { %>
-            <input type="hidden" name="productId" value="<%= product._id %>">
+                <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
 
-            <button class="btn" type="submit"><% if (editing) { %>Update Product <% } else { %>Add Product<% } %></button>
+            <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
