--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -35,6 +35,7 @@
                             </article>
                             <% } %>
                     </div>
+                    <%- include('../includes/pagination.ejs', {currentPage, hasNextPage, hasPrevPage, lastPage}) %>
                     <% } else { %>
                         <h1>No Products Found!</h1>
                         <% } %>
