--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -20,10 +20,9 @@
                 </ul>
                 <hr>
                 <div class="centered">
-                    <!-- <form action="/create-order" method="POST">
-                        <button type="submit" class="btn">Order Now!</button>
-                    </form> -->
-                    <a href="/checkout" class="btn">Order Now!</a>
+                    <form action="/checkout" method="POST">
+                        <button type="submit" class="btn">CHECKOUT</button>
+                    </form>
                 </div>
                 
             <% } else { %>
